<resources>
    <string name="app_name">Weather App</string>
    <string name="today">Today</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="weather_image">Weather Image</string>
    <string name="sample_text">Sample Text</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="_1_am">1 AM</string>
    <string name="_26">26</string>
</resources>
