<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout1"
    android:layout_width="90dp"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"  > <!-- Added corner radius for better aesthetics -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_hourly"
        android:orientation="vertical">
        <TextView
            android:id="@+id/horly_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:text="@string/_1_am"
         android:textSize="14sp" />

        <ImageView
            android:id="@+id/pic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/cloud" />

        <TextView
            android:id="@+id/tempText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:text="@string/_26"
            android:textSize="18sp"
            android:textColor="#FFFFFF" /> <!-- Added text color for temperature for consistency -->

    </LinearLayout>

</androidx.cardview.widget.CardView>
