<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <!-- Today text -->
            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp" />

            <!-- Date text -->
            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6 June 2025"
                android:textColor="@color/white"
                android:layout_marginTop="8dp" />

            <!-- Weather card -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background2"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Weather image -->
                <ImageView
                    android:id="@+id/cloudly_img"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/cloudy_sunny"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/weather_image" />

                <!-- Weather description -->
                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mostly Cloudy"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp" />

                <!-- Temperature -->
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="25°"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="43sp"
                    android:layout_marginTop="8dp" />

                <!-- High / Low -->
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="H:27 L:10"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />

                <!-- Humidity Section -->
                <LinearLayout
                    android:id="@+id/humidity_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:showDividers="middle"
                    android:divider="?android:attr/listDivider"
                    android:dividerPadding="16dp">

                    <!-- Humidity Block 1 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginHorizontal="8dp">

                        <ImageView
                            android:id="@+id/imageView_humidity1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/umbrella" />

                        <TextView
                            android:id="@+id/textView_humidity_value1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="18%"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:id="@+id/textView_humidity_label1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rain"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                    <!-- Humidity Block 2 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginHorizontal="8dp">

                        <ImageView
                            android:id="@+id/imageView_humidity2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/textView_humidity_value2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12 km/h"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:id="@+id/textView_humidity_label2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                    <!-- Humidity Block 3 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginHorizontal="8dp">

                        <ImageView
                            android:id="@+id/imageView_humidity3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/textView_humidity_value3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="18%"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:id="@+id/textView_humidity_label3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Humidity"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                </LinearLayout>
                <!-- End of Humidity Section -->

            </LinearLayout>
            <!-- End of Weather Card -->

            <!-- Bottom Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    android:text="@string/today" />

                <TextView
                    android:id="@+id/nextTxtBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_7_days"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view1"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingEnd="16dp"
                tools:ignore="InvalidId,RtlSymmetry">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
