<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="42dp"
                android:layout_height="42dp">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/background2"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Weather image -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cloudly_img"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/weather_image"
                        android:scaleType="fitCenter"
                        android:src="@drawable/cloudy_sunny" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textview3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Tommorow"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="25°"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="43sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Most Cloudly"
                            android:textAlignment="viewStart"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Weather description -->

                <!-- Temperature -->

                <!-- High / Low -->

                <!-- Humidity Section -->
                <LinearLayout
                    android:id="@+id/humidity_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:divider="?android:attr/listDivider"
                    android:dividerPadding="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <!-- Humidity Block 1 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_humidity1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/umbrella" />

                        <TextView
                            android:id="@+id/textView_humidity_value1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="18%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView_humidity_label1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/rain"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Humidity Block 2 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_humidity2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/textView_humidity_value2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="12 km/h"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView_humidity_label2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/wind"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!-- Humidity Block 3 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_humidity3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/humidity_icon"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/textView_humidity_value3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="18%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView_humidity_label3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="Humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:nestedScrollingEnabled="true" />

                <!-- End of Humidity Section -->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>